# php.rs

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE_PRIORITIES.txt  Cargo.toml  Dockerfile  Makefile  PDO_INTEGRATION_COMPLETE.md  PDO_POSTGRESQL_IMPLEMENTATION.md  PDO_POSTGRESQL_QUICKSTART.md  README.md  TODO.txt  docker-compose.yml  index.php  lsan_suppressions.txt  ralph-overnight.sh  ralph.sh  serverless_todo.txt
.claude/: ralph-loop.local.md  ralph-prompt.md  settings.local.json
.github/workflows/: ci.yml
benches/php/: bench_array_ops.php  bench_echo_loop.php  bench_function_calls.php  bench_object_creation.php  bench_string_concat.php  run_all.sh
crates/php-rs-compiler/: Cargo.toml
crates/php-rs-compiler/src/: compiler.rs  lib.rs  op.rs  op_array.rs  opcache.rs  opcode.rs
crates/php-rs-composer/: Cargo.toml
crates/php-rs-composer/src/: cli.rs  config.rs  lib.rs  plugin.rs  scripts.rs
crates/php-rs-composer/src/autoload/: generator.rs  mod.rs
crates/php-rs-composer/src/commands/: create_project.rs  dump_autoload.rs  init.rs  install.rs  mod.rs  remove.rs  require.rs  run_script.rs  search.rs  show.rs  update.rs  validate.rs
crates/php-rs-composer/src/downloader/: archive_downloader.rs  download_manager.rs  git_downloader.rs  mod.rs  path_downloader.rs
crates/php-rs-composer/src/installer/: binary_installer.rs  installation_manager.rs  library_installer.rs  metapackage_installer.rs  mod.rs
crates/php-rs-composer/src/json/: json_file.rs  mod.rs
crates/php-rs-composer/src/package/: link.rs  loader.rs  locker.rs  mod.rs  package.rs
crates/php-rs-composer/src/repository/: composer_repo.rs  lock_repo.rs  mod.rs  path_repo.rs  platform_repo.rs  repository.rs  vcs_repo.rs
crates/php-rs-composer/src/resolver/: decisions.rs  mod.rs  policy.rs  pool.rs  pool_builder.rs  problem.rs  rule.rs  rule_set.rs  rule_watch_graph.rs  solver.rs  transaction.rs
crates/php-rs-composer/src/semver/: constraint.rs  matcher.rs  mod.rs  parser.rs  version.rs
crates/php-rs-composer/tests/: integration_tests.rs
crates/php-rs-ext-bcmath/: Cargo.toml
crates/php-rs-ext-bz2/: Cargo.toml
crates/php-rs-ext-calendar/: Cargo.toml
crates/php-rs-ext-ctype/: Cargo.toml
crates/php-rs-ext-curl/: Cargo.toml
crates/php-rs-ext-date/: Cargo.toml
crates/php-rs-ext-dba/: Cargo.toml
crates/php-rs-ext-dom/: Cargo.toml
crates/php-rs-ext-enchant/: Cargo.toml
crates/php-rs-ext-exif/: Cargo.toml
crates/php-rs-ext-ffi/: Cargo.toml
crates/php-rs-ext-fileinfo/: Cargo.toml
crates/php-rs-ext-filter/: Cargo.toml
crates/php-rs-ext-ftp/: Cargo.toml
crates/php-rs-ext-gd/: Cargo.toml
crates/php-rs-ext-gettext/: Cargo.toml
crates/php-rs-ext-gmp/: Cargo.toml
crates/php-rs-ext-hash/: Cargo.toml
crates/php-rs-ext-iconv/: Cargo.toml
crates/php-rs-ext-intl/: Cargo.toml
crates/php-rs-ext-json/: Cargo.toml
crates/php-rs-ext-ldap/: Cargo.toml
crates/php-rs-ext-lexbor/: Cargo.toml
crates/php-rs-ext-libxml/: Cargo.toml
crates/php-rs-ext-mbstring/: Cargo.toml
crates/php-rs-ext-mysqli/: Cargo.toml  README.md
crates/php-rs-ext-mysqlnd/: Cargo.toml
crates/php-rs-ext-odbc/: Cargo.toml
crates/php-rs-ext-opcache/: Cargo.toml
crates/php-rs-ext-openssl/: Cargo.toml
crates/php-rs-ext-openssl/src/: lib.rs
crates/php-rs-ext-sodium/: Cargo.toml
crates/php-rs-ext-sodium/src/: lib.rs
crates/php-rs-ext-standard/: Cargo.toml
crates/php-rs-ext-standard/src/: arrays.rs  file.rs  lib.rs  math.rs  misc.rs  strings.rs  variables.rs
crates/php-rs-orchestrator/: Cargo.toml
crates/php-rs-orchestrator/src/: api.rs  auth.rs  bench.rs  build.rs  cluster.rs  cron.rs  dashboard.rs  deploy.rs  gitdeploy.rs  isolation.rs  logs.rs  main.rs  manifest.rs  preload.rs  process.rs  router.rs  scaling.rs  secrets.rs  services.rs  state.rs  tls.rs  workers.rs
crates/php-rs-parser/: Cargo.toml
crates/php-rs-parser/src/: ast.rs  lib.rs  parser.rs
crates/php-rs-parser/tests/: parse_phpt_debug.rs  parse_phpt_lang.rs
crates/php-rs-sapi-cli/: Cargo.toml
crates/php-rs-sapi-cli/src/: main.rs  server.rs
crates/php-rs-sapi-fpm/: Cargo.toml
crates/php-rs-sapi-fpm/src/: lib.rs
crates/php-rs-sapi-paas/: Cargo.toml
crates/php-rs-sapi-paas/src/: config.rs  handler.rs  logging.rs  main.rs  metrics.rs  mime.rs  superglobals.rs  worker.rs
crates/php-rs-sapi-wasm/: Cargo.toml
crates/php-rs-sapi-wasm/src/: lib.rs  wasi_main.rs
crates/php-rs-vm/: Cargo.toml
crates/php-rs-vm/benches/: vm_benchmarks.rs
crates/php-rs-vm/src/: lib.rs  sqlite3.rs  value.rs  vm.rs
crates/php-rs-vm/src/builtins/: arrays.rs  curl.rs  date.rs  file.rs  json.rs  math.rs  misc.rs  mod.rs  mysqli.rs  output.rs  pcre.rs  remaining.rs  strings.rs  type_check.rs
crates/php-rs-vm/src/vm/: call.rs  database.rs  defaults.rs  generators.rs  helpers.rs  mod.rs  oop.rs  output.rs  reflection.rs  spl.rs  tests.rs  vfs.rs
data/: hypercafe.db
doc/: architecture.md  benchmarks.md  extensions.md  php-rs.1  wasm.md
examples/: mysql_demo.php  pdo_pgsql_test.php  test_pdo_pgsql.php
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_compiler.rs  fuzz_lexer.rs  fuzz_parser.rs  fuzz_vm.rs
my-app/: BigTrait.php  MiniTrait.php  TestClass.php  TestClass2.php  TestTrait.php  TestTrait2.php  TestTraitNS.php  composer.json  test_actual_trait_parse.php  test_app_parse.php  test_autoload_debug.php  test_autoload_files.php  test_autoload_step.php  test_autoload_trace.php  test_big_trait.php  test_boot.php  test_boot10.php  test_boot11.php  test_boot12.php  test_boot13.php  test_boot14.php  test_boot15.php  test_boot16.php  test_boot17.php  test_boot18.php  test_boot19.php  test_boot2.php  test_boot20.php  test_boot21.php  test_boot22.php  test_boot23.php  test_boot24.php  test_boot25.php  test_boot26.php  test_boot3.php  test_boot4.php  test_boot5.php  test_boot6.php  test_boot7.php  test_boot8.php  (+55 more)
scripts/: install.sh  setup_mysql_test.sh
src/: lib.rs
tests/: final-demo.php  invoke_test.php  laravel-success.php  phpt_runner.rs  test-laravel-http.sh  test-laravel-routes.php
tools/: coverage.rs
(+126 files in other folders)
