[workspace]
resolver = "2"
members = [
    "crates/php-rs-types",
    "crates/php-rs-lexer",
    "crates/php-rs-parser",
    "crates/php-rs-compiler",
    "crates/php-rs-vm",
    "crates/php-rs-gc",
    "crates/php-rs-runtime",
    "crates/php-rs-ext-standard",
    "crates/php-rs-ext-json",
    "crates/php-rs-ext-pcre",
    "crates/php-rs-ext-date",
    "crates/php-rs-ext-spl",
    "crates/php-rs-ext-hash",
    "crates/php-rs-ext-filter",
    "crates/php-rs-ext-mbstring",
    "crates/php-rs-ext-ctype",
    "crates/php-rs-ext-tokenizer",
    "crates/php-rs-sapi-cli",
    "crates/php-rs-sapi-fpm",
    "crates/php-rs-sapi-embed",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["php.rs contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/php/php-rs"

[workspace.dependencies]
# Shared dependencies across the workspace

[package]
name = "php-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Integration test dependencies

[dev-dependencies]
regex = "1"
