[workspace]
resolver = "2"
exclude = ["fuzz"]
members = [
    "crates/php-rs-types",
    "crates/php-rs-lexer",
    "crates/php-rs-parser",
    "crates/php-rs-compiler",
    "crates/php-rs-vm",
    "crates/php-rs-gc",
    "crates/php-rs-runtime",
    "crates/php-rs-ext-standard",
    "crates/php-rs-ext-json",
    "crates/php-rs-ext-pcre",
    "crates/php-rs-ext-date",
    "crates/php-rs-ext-spl",
    "crates/php-rs-ext-hash",
    "crates/php-rs-ext-filter",
    "crates/php-rs-ext-mbstring",
    "crates/php-rs-ext-ctype",
    "crates/php-rs-ext-tokenizer",
    "crates/php-rs-ext-curl",
    "crates/php-rs-ext-openssl",
    "crates/php-rs-ext-sodium",
    "crates/php-rs-ext-reflection",
    "crates/php-rs-ext-pdo",
    "crates/php-rs-ext-session",
    "crates/php-rs-ext-random",
    "crates/php-rs-ext-intl",
    "crates/php-rs-ext-opcache",
    "crates/php-rs-ext-dom",
    "crates/php-rs-ext-xml",
    "crates/php-rs-ext-bcmath",
    "crates/php-rs-ext-bz2",
    "crates/php-rs-ext-calendar",
    "crates/php-rs-ext-dba",
    "crates/php-rs-ext-enchant",
    "crates/php-rs-ext-exif",
    "crates/php-rs-ext-ffi",
    "crates/php-rs-ext-fileinfo",
    "crates/php-rs-ext-ftp",
    "crates/php-rs-ext-gd",
    "crates/php-rs-ext-gettext",
    "crates/php-rs-ext-gmp",
    "crates/php-rs-ext-iconv",
    "crates/php-rs-ext-ldap",
    "crates/php-rs-ext-mysqli",
    "crates/php-rs-ext-mysqlnd",
    "crates/php-rs-ext-odbc",
    "crates/php-rs-ext-pcntl",
    "crates/php-rs-ext-pdo-mysql",
    "crates/php-rs-ext-pdo-pgsql",
    "crates/php-rs-ext-phar",
    "crates/php-rs-ext-posix",
    "crates/php-rs-ext-readline",
    "crates/php-rs-ext-shmop",
    "crates/php-rs-ext-snmp",
    "crates/php-rs-ext-soap",
    "crates/php-rs-ext-sockets",
    "crates/php-rs-ext-sqlite3",
    "crates/php-rs-ext-sysvmsg",
    "crates/php-rs-ext-sysvsem",
    "crates/php-rs-ext-sysvshm",
    "crates/php-rs-ext-tidy",
    "crates/php-rs-ext-xsl",
    "crates/php-rs-ext-zip",
    "crates/php-rs-ext-zlib",
    "crates/php-rs-sapi-cli",
    "crates/php-rs-sapi-fpm",
    "crates/php-rs-sapi-embed",
    "crates/php-rs-composer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["php.rs contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/php/php-rs"

[workspace.dependencies]
# Shared dependencies across the workspace

[package]
name = "php-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Integration test dependencies

[dev-dependencies]
regex = "1"

[[bin]]
name = "coverage"
path = "tools/coverage.rs"
