[package]
name = "php-rs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
php-rs-lexer = { path = "../crates/php-rs-lexer" }
php-rs-parser = { path = "../crates/php-rs-parser" }
php-rs-compiler = { path = "../crates/php-rs-compiler" }
php-rs-vm = { path = "../crates/php-rs-vm" }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_lexer"
path = "fuzz_targets/fuzz_lexer.rs"
doc = false

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
doc = false

[[bin]]
name = "fuzz_compiler"
path = "fuzz_targets/fuzz_compiler.rs"
doc = false

[[bin]]
name = "fuzz_vm"
path = "fuzz_targets/fuzz_vm.rs"
doc = false
