[package]
name = "php-rs-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
php-rs-lexer = { path = "../php-rs-lexer" }
php-rs-parser = { path = "../php-rs-parser" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
