[package]
name = "php-rs-ext-openssl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
ecb = { version = "0.1", features = ["alloc"] }
cipher = { version = "0.4", features = ["alloc"] }
getrandom = "0.2"
rsa = "0.9"
num-bigint-dig = "0.8"
sha2 = { version = "0.10", features = ["oid"] }
pkcs8 = { version = "0.10", features = ["pem"] }
signature = "2"
rand = "0.8"

[dev-dependencies]
