[package]
name = "php-rs-orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "PaaS orchestrator for php.rs — process manager, deployment, health monitoring"

[[bin]]
name = "php-rs-ctl"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
rcgen = "0.13"
ring = "0.17"
base64 = "0.22"
bcrypt = "0.16"
ureq = { version = "2", default-features = false, features = ["tls", "json"] }

[dev-dependencies]
