[package]
name = "php-rs-sapi-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "php-rs"
path = "src/main.rs"

[dependencies]
php-rs-compiler = { path = "../php-rs-compiler" }
php-rs-vm = { path = "../php-rs-vm" }
php-rs-runtime = { path = "../php-rs-runtime" }

[dev-dependencies]
