[package]
name = "php-rs-sapi-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "php-rs"
path = "src/main.rs"

[dependencies]
php-rs-compiler = { path = "../php-rs-compiler" }
php-rs-vm = { path = "../php-rs-vm" }
php-rs-runtime = { path = "../php-rs-runtime" }
php-rs-composer = { path = "../php-rs-composer" }
php-rs-ext-pdo = { path = "../php-rs-ext-pdo" }
php-rs-ext-pdo-pgsql = { path = "../php-rs-ext-pdo-pgsql" }
libc = "0.2"

[dev-dependencies]
