[package]
name = "php-rs-sapi-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM SAPI for php.rs — run PHP in the browser"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
php-rs-compiler = { path = "../php-rs-compiler" }
php-rs-vm = { path = "../php-rs-vm", default-features = false }
php-rs-runtime = { path = "../php-rs-runtime" }
php-rs-lexer = { path = "../php-rs-lexer" }
php-rs-parser = { path = "../php-rs-parser" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
