[package]
name = "php-rs-sapi-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM SAPI for php.rs — run PHP in the browser"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "php-rs-wasi"
path = "src/wasi_main.rs"
required-features = ["wasi"]

[features]
default = ["browser"]
browser = ["wasm-bindgen", "js-sys", "console_error_panic_hook"]
wasi = []

[dependencies]
php-rs-compiler = { path = "../php-rs-compiler" }
php-rs-vm = { path = "../php-rs-vm" }
php-rs-runtime = { path = "../php-rs-runtime" }
php-rs-lexer = { path = "../php-rs-lexer" }
php-rs-parser = { path = "../php-rs-parser", features = ["serde"] }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
