[package]
name = "php-rs-vm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
php-rs-compiler = { path = "../php-rs-compiler" }
php-rs-ext-json = { path = "../php-rs-ext-json" }
php-rs-ext-hash = { path = "../php-rs-ext-hash" }
php-rs-ext-standard = { path = "../php-rs-ext-standard" }
php-rs-ext-zlib = { path = "../php-rs-ext-zlib" }
php-rs-ext-curl = { path = "../php-rs-ext-curl" }
php-rs-ext-pdo = { path = "../php-rs-ext-pdo" }
regex = "1"
fancy-regex = "0.14"
mysql = "25.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "vm_benchmarks"
harness = false
